Changelog
=========

0.4 (unreleased)
----------------

- Fix error at startup:
  "Couldn't import plone_displayviews, No module named plone_displayviews".
  [thomasdesvenain]

- Do not force content views.
  [thomasdesvenain]


0.3 (2012-08-01)
----------------

- Move to github.
  [thomasdesvenain]

- Chameleon compatible.
  [thomasdesvenain]

- Products.CMFPlacefulWorkflow not required anymore.

- ListingRights can replace manual sort by column sort.
  Remove kss sort stuff.
  [thomasdesvenain]

- Fixed redirect after delete popup.
  [thomasdesvenain]

- Page title was changed to <h1> (was <h2>).
  [cedricmessiant]


0.2 (2012-04-12)
----------------

- Listingrights class can restrict buttons display and modification date display.

- Add a 'download' column if we have files.

- Uses collective.externaleditor.

- Fixed styles.

0.1 (2011-12-02)
----------------

- Initial release